--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^6.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpword": "^0.17.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
